Сделал окошки живыми, подключил БД

--- a/src/main/resources/com/example/client_server_application/app.fxml
+++ b/src/main/resources/com/example/client_server_application/app.fxml
@@ -20,7 +20,7 @@
                   <Font name="Arial" size="24.0" />
                </font>
             </Text>
-            <Button fx:id="buttonEnter" layoutX="243.0" layoutY="172.0" mnemonicParsing="false" onAction="#switchToSceneGL" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #32CD32;" text="Назад" textFill="WHITE">
+            <Button fx:id="buttonBack" layoutX="243.0" layoutY="172.0" mnemonicParsing="false" onAction="#switchToSceneGL" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #32CD32;" text="Назад" textFill="WHITE">
                <font>
                   <Font name="Arial" size="18.0" />
                </font>
