--- a/src/main/resources/com/example/client_server_application/signUp.fxml
+++ b/src/main/resources/com/example/client_server_application/signUp.fxml
@@ -2,11 +2,12 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2E3348;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client_server_application.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2E3348;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client_server_application.SignUpController">
     <children>
         <Label layoutX="192.0" layoutY="46.0" text="Добро пожаловать!" textFill="WHITE">
             <font>
@@ -20,7 +21,7 @@
                         <Font name="Arial" size="16.0" />
                     </font>
                 </TextField>
-                <Button fx:id="signUpButton" layoutX="346.0" layoutY="192.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="199.0" style="-fx-background-color: #32CD32;" text="Зарегистрироваться" textFill="WHITE">
+                <Button fx:id="signUpButton" layoutX="346.0" layoutY="192.0" mnemonicParsing="false" onAction="#switchToSceneRegistered" prefHeight="34.0" prefWidth="199.0" style="-fx-background-color: #32CD32;" text="Зарегистрироваться" textFill="WHITE">
                     <font>
                         <Font name="Arial" size="18.0" />
                     </font>
@@ -35,11 +36,6 @@
                   <Font name="Arial" size="16.0" />
                </font>
             </TextField>
-            <TextField fx:id="signUpPassword" layoutX="306.0" layoutY="123.0" prefHeight="31.0" prefWidth="280.0" promptText="Логин">
-               <font>
-                  <Font name="Arial" size="16.0" />
-               </font>
-            </TextField>
             <Label layoutX="212.0" layoutY="18.0" text="Введите данные" textFill="#797979">
                <font>
                   <Font name="Arial" size="24.0" />
@@ -50,6 +46,11 @@
                   <Font name="Arial" size="18.0" />
                </font>
             </Button>
+            <PasswordField fx:id="signUpPassword" layoutX="306.0" layoutY="123.0" prefHeight="31.0" prefWidth="280.0" promptText="Пароль">
+               <font>
+                  <Font name="Arial" size="16.0" />
+               </font>
+            </PasswordField>
             </children>
         </AnchorPane>
     </children>
