--- a/src/main/resources/com/example/client_server_application/app.fxml
+++ b/src/main/resources/com/example/client_server_application/app.fxml
@@ -2,27 +2,81 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2E3348;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client_server_application.HelloController">
     <children>
-        <Label layoutX="192.0" layoutY="46.0" text="Добро пожаловать!" textFill="WHITE">
+        <Label layoutX="184.0" layoutY="47.0" text="Список велосипедов" textFill="WHITE">
             <font>
                 <Font name="Arial" size="24.0" />
             </font>
         </Label>
-        <AnchorPane layoutY="121.0" prefHeight="278.0" prefWidth="600.0" style="-fx-background-color: fafafa;">
+        <AnchorPane layoutY="130.0" prefHeight="278.0" prefWidth="600.0" style="-fx-background-color: fafafa;">
          <children>
-            <Text layoutX="234.0" layoutY="147.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Привет мир">
-               <font>
-                  <Font name="Arial" size="24.0" />
-               </font>
-            </Text>
-            <Button fx:id="buttonBack" layoutX="243.0" layoutY="172.0" mnemonicParsing="false" onAction="#switchToSceneGL" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #32CD32;" text="Назад" textFill="WHITE">
+            <Button fx:id="buttonBack2" layoutX="243.0" layoutY="231.0" mnemonicParsing="false" onAction="#switchToSceneGL" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #32CD32;" text="Назад" textFill="WHITE">
                <font>
                   <Font name="Arial" size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="buttonSpisok" layoutX="217.0" layoutY="8.0" mnemonicParsing="false" onAction="#goSpisok" prefHeight="33.0" prefWidth="167.0" style="-fx-background-color: #32CD32;" text="Показать список" textFill="WHITE">
+               <font>
+                  <Font name="Arial" size="18.0" />
+               </font>
+            </Button>
+            <TextField fx:id="qwe" alignment="CENTER" editable="false" layoutX="68.0" layoutY="73.0" prefHeight="30.0" prefWidth="149.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="qwe1" alignment="TOP_CENTER" editable="false" layoutX="217.0" layoutY="73.0" prefHeight="26.0" prefWidth="149.0">
+               <font>
+                  <Font name="Arial" size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="qwe2" alignment="CENTER" editable="false" layoutX="365.0" layoutY="73.0" prefHeight="25.0" prefWidth="149.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="str1_1" editable="false" layoutX="69.0" layoutY="98.0" />
+            <TextField fx:id="str1_2" editable="false" layoutX="216.0" layoutY="98.0" />
+            <TextField fx:id="str1_3" editable="false" layoutX="365.0" layoutY="98.0" />
+            <TextField fx:id="str2_2" editable="false" layoutX="218.0" layoutY="122.0" />
+            <TextField fx:id="str2_3" editable="false" layoutX="365.0" layoutY="122.0" />
+            <TextField fx:id="str2_1" editable="false" layoutX="68.0" layoutY="122.0" />
+            <Label layoutX="110.0" layoutY="73.0" prefHeight="27.0" prefWidth="66.0" text="Название">
+               <font>
+                  <Font name="Arial" size="14.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" layoutX="274.0" layoutY="73.0" prefHeight="27.0" prefWidth="36.0" text="Тип">
+               <font>
+                  <Font name="Arial" size="14.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" layoutX="383.0" layoutY="73.0" prefHeight="27.0" prefWidth="114.0" text="Кол-во передач">
+               <font>
+                  <Font name="Arial" size="14.0" />
+               </font>
+            </Label>
+            <Button fx:id="buttonArenda1" layoutX="514.0" layoutY="98.0" mnemonicParsing="false" onAction="#switchToMagazin" prefHeight="26.0" prefWidth="74.0" style="-fx-background-color: #32CD32;" text="Арендовать" textFill="WHITE">
+               <font>
+                  <Font name="Arial" size="10.0" />
+               </font>
+            </Button>
+            <Button fx:id="buttonArenda2" layoutX="514.0" layoutY="122.0" mnemonicParsing="false" onAction="#switchToMagazin" prefHeight="26.0" prefWidth="74.0" style="-fx-background-color: #32CD32;" text="Арендовать" textFill="WHITE">
+               <font>
+                  <Font name="Arial" size="10.0" />
+               </font>
+            </Button>
+            <TextField fx:id="str3_1" editable="false" layoutX="69.0" layoutY="147.0" />
+            <TextField fx:id="str3_2" editable="false" layoutX="218.0" layoutY="147.0" />
+            <TextField fx:id="str3_3" editable="false" layoutX="366.0" layoutY="147.0" />
+            <Button fx:id="buttonArenda3" layoutX="514.0" layoutY="146.0" mnemonicParsing="false" onAction="#switchToMagazin" prefHeight="26.0" prefWidth="74.0" style="-fx-background-color: #32CD32;" text="Арендовать" textFill="WHITE">
+               <font>
+                  <Font name="Arial" size="10.0" />
                </font>
             </Button>
          </children>
