--- a/src/main/resources/com/example/client_server_application/signUp.fxml
+++ b/src/main/resources/com/example/client_server_application/signUp.fxml
@@ -9,48 +9,53 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2E3348;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client_server_application.SignUpController">
     <children>
-        <Label layoutX="192.0" layoutY="46.0" text="Добро пожаловать!" textFill="WHITE">
+        <Label layoutX="207.0" layoutY="47.0" text="Введите данные" textFill="WHITE">
             <font>
                 <Font name="Arial" size="24.0" />
             </font>
         </Label>
         <AnchorPane layoutY="121.0" prefHeight="278.0" prefWidth="600.0" style="-fx-background-color: fafafa;">
             <children>
-                <TextField fx:id="signUpName" layoutX="14.0" layoutY="74.0" prefHeight="31.0" prefWidth="280.0" promptText="Имя">
+                <TextField fx:id="signUpName" layoutX="14.0" layoutY="42.0" prefHeight="31.0" prefWidth="280.0" promptText="Имя">
                     <font>
                         <Font name="Arial" size="16.0" />
                     </font>
                 </TextField>
-                <Button fx:id="signUpButton" layoutX="346.0" layoutY="192.0" mnemonicParsing="false" onAction="#switchToSceneRegistered" prefHeight="34.0" prefWidth="199.0" style="-fx-background-color: #32CD32;" text="Зарегистрироваться" textFill="WHITE">
+                <Button fx:id="signUpButton" layoutX="346.0" layoutY="202.0" mnemonicParsing="false" onAction="#switchToSceneRegistered" prefHeight="34.0" prefWidth="199.0" style="-fx-background-color: #32CD32;" text="Зарегистрироваться" textFill="WHITE">
                     <font>
                         <Font name="Arial" size="18.0" />
                     </font>
                 </Button>
-            <TextField fx:id="signUpLastName" layoutX="306.0" layoutY="74.0" prefHeight="31.0" prefWidth="280.0" promptText="Фамилия">
+            <TextField fx:id="signUpLastName" layoutX="306.0" layoutY="42.0" prefHeight="31.0" prefWidth="280.0" promptText="Фамилия">
                <font>
                   <Font name="Arial" size="16.0" />
                </font>
             </TextField>
-            <TextField fx:id="signUpLogin" layoutX="14.0" layoutY="123.0" prefHeight="31.0" prefWidth="280.0" promptText="Логин">
+            <TextField fx:id="signUpLogin" layoutX="14.0" layoutY="89.0" prefHeight="31.0" prefWidth="280.0" promptText="Логин">
                <font>
                   <Font name="Arial" size="16.0" />
                </font>
             </TextField>
-            <Label layoutX="212.0" layoutY="18.0" text="Введите данные" textFill="#797979">
-               <font>
-                  <Font name="Arial" size="24.0" />
-               </font>
-            </Label>
-            <Button fx:id="buttonEnter2" layoutX="54.0" layoutY="192.0" mnemonicParsing="false" onAction="#switchToSceneGL" prefHeight="34.0" prefWidth="199.0" style="-fx-background-color: #32CD32;" text="Назад" textFill="WHITE">
+            <Button fx:id="buttonEnter2" layoutX="54.0" layoutY="202.0" mnemonicParsing="false" onAction="#switchToSceneGL" prefHeight="34.0" prefWidth="199.0" style="-fx-background-color: #32CD32;" text="Назад" textFill="WHITE">
                <font>
                   <Font name="Arial" size="18.0" />
                </font>
             </Button>
-            <PasswordField fx:id="signUpPassword" layoutX="306.0" layoutY="123.0" prefHeight="31.0" prefWidth="280.0" promptText="Пароль">
+            <PasswordField fx:id="signUpPassword" layoutX="306.0" layoutY="89.0" prefHeight="31.0" prefWidth="280.0" promptText="Пароль">
                <font>
                   <Font name="Arial" size="16.0" />
                </font>
             </PasswordField>
+            <TextField fx:id="signUpPassport" layoutX="14.0" layoutY="138.0" prefHeight="31.0" prefWidth="280.0" promptText="Серия и номер паспорта">
+               <font>
+                  <Font name="Arial" size="16.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="signUpAddress" layoutX="306.0" layoutY="138.0" prefHeight="31.0" prefWidth="280.0" promptText="Адрес">
+               <font>
+                  <Font name="Arial" size="16.0" />
+               </font>
+            </TextField>
             </children>
         </AnchorPane>
     </children>
